fixing overflow and color on drop nav for responsive

--- a/src/styles/site.less
+++ b/src/styles/site.less
@@ -140,7 +140,7 @@ ul.nav-tabs li {
 	}
 }
 
-@media (max-width: @screen-sm-max) { 
+@media (max-width: @screen-xs-max) { 
 	#navbar {
 		margin-top: 0;
 		overflow: hidden;
